--- a/stunmachine.vcxproj
+++ b/stunmachine.vcxproj
@@ -332,7 +332,7 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="C:\Users\walz0\stunmachine\main.cpp" />
+    <ClCompile Include="C:\Users\walz0\stunmachine\src\main.cpp" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
