add support for linux build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,29 +3,36 @@ project(stunmachine)
 
 set(CMAKE_CXX_STANDARD 17)
 
-# Path to your ENet folder
-set(ENET_DIR "C:/Program Files (x86)/enet")
+# === Cross-platform ENet location ===
+# Windows user-provided path
+if (WIN32)
+    set(ENET_DIR "C:/Program Files (x86)/enet")
+    include_directories("${ENET_DIR}/include")
 
-# Add include path
-include_directories("${ENET_DIR}/include")
+    add_library(enet STATIC IMPORTED)
+    set_target_properties(enet PROPERTIES
+        IMPORTED_LOCATION "${ENET_DIR}/lib/enet.lib"
+    )
+else()
+    # Linux: assume ENet is installed system-wide (sudo apt install libenet-dev)
+    find_package(ENet REQUIRED)
+endif()
 
-# Import ENet library
-add_library(enet STATIC IMPORTED)
-set_target_properties(enet PROPERTIES
-    IMPORTED_LOCATION "${ENET_DIR}/lib/enet.lib"
-)
+# ===== CLIENT =====
+add_executable(client src/client/client.cpp)
 
-# Add your source files from the src folder
-file(GLOB_RECURSE SOURCES
-    "${CMAKE_SOURCE_DIR}/src/*.cpp"
-)
+if (WIN32)
+    target_link_libraries(client PRIVATE enet ws2_32 winmm)
+else()
+    target_link_libraries(client PRIVATE enet)   # Linux
+endif()
 
-add_executable(stunmachine ${SOURCES})
+# ===== SERVER =====
+add_executable(server src/server/server.cpp)
 
-# Link ENet + required Windows libs
-target_link_libraries(stunmachine PRIVATE
-    enet
-    ws2_32
-    winmm
-)
+if (WIN32)
+    target_link_libraries(server PRIVATE enet ws2_32 winmm)
+else()
+    target_link_libraries(server PRIVATE enet)
+endif()
 
