--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.15)
 project(stunmachine)
 
-set(CMAKE_C_COMPILER "C:/ProgramData/mingw64/mingw64/bin/gcc.exe")
-set(CMAKE_CXX_COMPILER "C:/ProgramData/mingw64/mingw64/bin/g++.exe")
+#set(CMAKE_C_COMPILER "C:/ProgramData/mingw64/mingw64/bin/gcc.exe")
+#set(CMAKE_CXX_COMPILER "C:/ProgramData/mingw64/mingw64/bin/g++.exe")
 set(CMAKE_C_USE_RESPONSE_FILE_FOR_INCLUDES OFF)
 set(CMAKE_CXX_USE_RESPONSE_FILE_FOR_INCLUDES OFF)
 set(CMAKE_CXX_STANDARD 17)
@@ -30,9 +30,8 @@ else()
 endif()
 
 # ===== CLIENT =====
-add_executable(client src/client/client.cpp)
-
 if (WIN32)
+	add_executable(client src/client/client.cpp)
     target_link_libraries(client PRIVATE enet ws2_32 winmm)
 else()
     target_link_libraries(client PRIVATE enet)   # Linux
